[package]
name = "helium-api"
version = "1.1.7"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "~0.11", features = ["gzip", "json", "blocking"]}
serde =  {version = "1", features=["derive"]}
serde_json = "1"
base64 = "0"
rust_decimal = {version = "1", features = ["serde-float"] }
thiserror = "1"
prost = "*"
helium-proto = { git = "https://github.com/helium/proto", branch="master"}
