[package]
name = "helium-api"
version = "3.2.0"
license = "Apache-2.0"
repository = "https://github.com/helium/helium-api-rs"
readme = "README.md"
description = "An async library for the Helium blockchain REST API"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"

[dependencies]
async-trait = "0"
base64 = "0"
chrono = {version = "0", features = ["serde"]}
futures = "0"
reqwest = {version = "0", default-features=false, features = ["gzip", "json", "rustls-tls"]}
rust_decimal = {version = "1", features = ["serde-float"] }
serde =  {version = "1", features=["derive"]}
serde_json = "1"
thiserror = "1"


[dev-dependencies]
tokio = {version = "1", features = ["full"]}
futures-util = "0"
